build.yaml
apiVersion: v1
kind: Pod
metadata:
  name: kaniko-builder
spec:
  restartPolicy: Never

  containers:
  - name: kaniko
    image: gcr.io/kaniko-project/executor:latest
    args:
      - "--dockerfile=/workspace/Dockerfile"
      - "--context=dir:///workspace/"
      - "--destination=docker.io/nezraal/test-app:v4"
      - "--verbosity=debug"
    volumeMounts:
      - name: workspace
        mountPath: /workspace

  volumes:
    - name: workspace
      hostPath:
        path: /run/desktop/mnt/host/c/Users/nezra/DockerTest
        type: Directory
