service-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: test-app
  namespace: prod-env
spec:
  type: NodePort
  selector:
    app: test-app
  ports:
    - port: 8000
      targetPort: 8000
      nodePort: 30080
