service.yaml
apiVersion: v1
kind: Service
metadata:
  name: test-app-service
spec:
  selector:
    app: test-app
  ports:
    - port: 80
      targetPort: 8000
  type: ClusterIP
