test.yaml
apiVersion: batch/v1
kind: Job
metadata:
  name: kaniko-build
spec:
  template:
    spec:
      restartPolicy: Never
      containers:
        - name: kaniko
          image: gcr.io/kaniko-project/executor:latest
          args:
            - "--context=dir:///workspace"
            - "--dockerfile=/workspace/Dockerfile"
            - "--destination=YOUR_REGISTRY/your-image:tag"
          volumeMounts:
            - name: workspace
              mountPath: /workspace
            - name: docker-config
              mountPath: /kaniko/.docker
      volumes:
        - name: workspace
          emptyDir: {}
        - name: docker-config
          secret:
            secretName: regcred

apiVersion: apps/v1
kind: Deployment
metadata:
  name: test-app-deployment
  labels:
    app: test-app
    namespace: test-dev
spec:
  replicas: 3
  selector:
    matchLabels:
      app: test-app
  template:
    metadata:
      labels:
        app: test-app
    spec:
      containers:
        - name: test-app
          image: test-app:v3
          imagePullPolicy: IfNotPresent
          resources:
            requests:
              cpu: "250m"
              memory: "256Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"
          ports:
            - containerPort: 80



apiVersion: v1
kind: Service
metadata:
  name: test-app-service
  namespace: test-dev
spec:
  type: LoadBalancer
  selector:
    app: test-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80


apiVersion: v1
kind: ConfigMap
metadata:
  name: mssql-config
  namespace: test-dev
data:
  MSSQL_PID: "Developer"
  ACCEPT_EULA: "Y"
